tests/NormalTests/paczka1/small_fuzzy/67771556.err
Error in line 2: IvmqS A438 58,3
Error in line 5: IvmqS S668 99,2
Error in line 4: MrkOA A475 50,0
Error in line 15: IvmqS A438 31,3
